tests/paczka1/small_fuzzy/32589714.err
Error in line 2: 2NN A603 7,7
Error in line 3: KCKmjif A407 60,0
Error in line 4: 2NN A130 10,3
